test/files/neg/u000a.check
u000a.scala:11: error: expected class or object definition
// \u000a foo
          ^
1 error
